--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "proxy": "http://localhost:3001",
